fixed miniprogram use button overflow error

--- a/src/normalize/index.scss
+++ b/src/normalize/index.scss
@@ -136,10 +136,6 @@ textarea {
 	margin: 0;
 }
 
-button {
-	overflow: visible;
-}
-
 button,
 select {
 	text-transform: none;
